--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==2.0.1
 librosa==0.8.1
-numpy==1.19.2
-tensorflow==2.14.0
-Cython==0.29.24
+numpy==1.21.3
+tensorflow==2.6.0
+scikit-learn==0.24.2
